<resources>
    <string name="app_name">TipCalculatorTest</string>
    <string name="title">Tip Time</string>
    <string name="textView1">How was the service?</string>
    <string name="textView3">Round up tip?</string>
    <string name="option_twenty_percent">Amazing (20%)</string>
    <string name="option_eighteen_percent">Good (18%)</string>
    <string name="option_fifteen_percent">OK (15%)</string>
    <string name="tipResult">Tip Amount: %s</string>
</resources>
